/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package tracdap.metadata;

option java_package = "org.finos.tracdap.metadata";
option java_multiple_files = true;

import "tracdap/metadata/type.proto";
import "tracdap/metadata/model.proto";
import "tracdap/metadata/search.proto";
import "tracdap/metadata/tag_update.proto";


enum FlowNodeType {
  NODE_TYPE_NOT_SET = 0;
  INPUT_NODE = 1;
  OUTPUT_NODE = 2;
  MODEL_NODE = 3;
  PARAMETER_NODE = 4;
}


message FlowNode {

  FlowNodeType nodeType = 1;

  repeated string parameters = 7;
  repeated string inputs = 2;
  repeated string outputs = 3;

  SearchExpression nodeSearch = 4;
  repeated TagUpdate nodeAttrs = 5;
  map<string, Value> nodeProps = 8;
  string label = 6;
}

message FlowSocket {

  string node = 1;
  string socket = 2;
}

message FlowEdge {

  FlowSocket source = 1;
  FlowSocket target = 2;
}


message FlowDefinition {

  map<string, FlowNode> nodes = 1;
  repeated FlowEdge edges = 2;

  map<string, ModelParameter> parameters = 3;
  map<string, ModelInputSchema> inputs = 4;
  map<string, ModelOutputSchema> outputs = 5;
}
